# tiny-little-regex

./: CMakeLists.txt  main.c  pattern.c  pattern.h  quantifier.c  quantifier.h  regex.c  regex.h  stack.h  statemach.c  statemach.h  token.c  token.h
test/: myassert.h  quantifier_test.c  regex_test.c  tests.c  tests.h
util/: list.c  list.h  stack.c
